--- a/pub.html
+++ b/pub.html
@@ -71,6 +71,8 @@ td.papers {
 						  Jiawei Tyler Gu, Xudong Sun, Wentao Zhang, Yuxuan Jiang, Chen Wang, Mandana Vaziri, Owolabi Legunsen, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 29th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'23</b></font>), Koblenz, Germany, Oct. 2023.
+						  <br>
+						  Project: <a href="https://github.com/xlab-uiuc/acto" target="_blank">https://github.com/xlab-uiuc/acto</a> (<a href="https://github.com/xlab-uiuc/acto/tree/sosp-ae" target="_blank">research artifact<a>)
 					  </span>
 				  </div>
 		</td>
@@ -103,10 +105,44 @@ td.papers {
 						  Hao Lin, Jiaxing Qiu, Hongyi Wang, Zhenhua Li, Liangyi Gong, Di Gao, Yunhao Liu, Feng Qian, Zhao Zhang, Ping Yang, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 29th Annual International Conference on Mobile Computing and Networking (<font color="#083b89"><b>MobiCom'23</b></font>), Madrid, Spain, Oct. 2023.
+						  <br>
+						  Artifact: <a href="https://github.com/Android-Emulation-Testing/emu-fidelity-ae" target="_blank">https://github.com/Android-Emulation-Testing/emu-fidelity-ae</a>
 					  </span>
 				  </div>
 		  </td>
 	</tr> 
+
+	<tr>
+		<td class="date"><font color="#083b89">SoCC'23</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Towards GPU Memory Efficiency for Distributed Training at Scale</strong> [<a href="pub/amp.pdf" target="_blank">pdf</a> | <a href="pub/amp_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Runxiang Cheng, Chris Cai, Selman Yilmaz, Rahul Mitra, Malay Bag, Mrinmoy Ghosh, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 14th ACM Symposium on Cloud Computing (<font color="#083b89"><b>SoCC'23</b></font>), Santa Cruz, CA, Oct. 2023.
+					  </span>
+				  </div>
+		  </td>
+	</tr>
+
+	<tr>
+		<td class="date"><font color="#083b89">PACT'23</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>HugeGPT: Storing Guest Page Tables on Host Huge Pages to Accelerate Address Translation</strong> [<a href="pub/hugegpt.pdf" target="_blank">pdf</a> | <a href="pub/hugegpt_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Weiwei Jia, Jiyuan Zhang, Jianchen Shan, Yiming Du, Xiaoning Ding, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 32nd International Conference on Parallel Architectures and Compilation Techniques (<font color="#083b89"><b>PACT'23</b></font>), Vienna, Austria, CA, Oct. 2023.
+					  </span>
+				  </div>
+		  </td>
+	</tr>
 	  
 	<tr>
 		<td class="date"><font color="#083b89">OSDI'23</font></td>
@@ -119,6 +155,8 @@ td.papers {
 						  Xiang (Jenny) Ren, Sitao Wang, Zhuqi Jin, David Lion, Adrian Chiu, Tianyin Xu, and Ding Yuan
 						  <br>
 						  In Proceedings of the 17th USENIX Symposium on Operating Systems Design and Implementation  (<font color="#083b89"><b>OSDI'23</b></font>), Boston, MA, July 2023.
+						  <br>
+						  Artifact: <a href="https://gitlab.dsrg.utoronto.ca/dsrg/perspect" target="_blank">https://gitlab.dsrg.utoronto.ca/dsrg/perspect</a>
 					  </span>
 				  </div>
 		  </td>
@@ -156,7 +194,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 50th Annual International Symposium on Computer Architecture (<font color="#083b89"><b>ISCA'23</b></font>), Orlando, FL, June 2023.
 						  <br>
-						  Data/code: <a href="https://github.com/xlab-uiuc/mxfaas" target="_blank">https://github.com/xlab-uiuc/mxfaas</a>
+						  Artifact: <a href="https://github.com/xlab-uiuc/mxfaas" target="_blank">https://github.com/xlab-uiuc/mxfaas</a>
 					  </span>
 				  </div>
 		  </td>
@@ -174,7 +212,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 18th European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'23</b></font>), Rome, Italy, May 2023.
 						  <br>
-						  Data/code: <a href="https://github.com/xlab-uiuc/csi-ae" target="_blank">https://github.com/xlab-uiuc/csi-ae</a>
+						  Artifact: <a href="https://github.com/xlab-uiuc/csi-ae" target="_blank">https://github.com/xlab-uiuc/csi-ae</a>
 						  <br>
 						  <font color="#C40233"><b>Gilles Muller Best Artifact Award</b></font>
 					  </span>
@@ -324,8 +362,8 @@ td.papers {
 						      Xudong Sun, Wenqing Luo, Jiawei Tyler Gu, Aishwarya Ganesan, Ramnatthan Alagappan, Michael Gasch, Lalith Suresh, and Tianyin Xu,
 						  <br>
 						  In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
-					          <br>
-						  Code/data: <a href="https://github.com/sieve-project/sieve" target="_blank">https://github.com/sieve-project/sieve</a> (<a href="https://github.com/sieve-project/sieve/tree/osdi-ae" target="_blank">research artifact<a>)
+					      <br>
+						  Project: <a href="https://github.com/sieve-project/sieve" target="_blank">https://github.com/sieve-project/sieve</a> (<a href="https://github.com/sieve-project/sieve/tree/osdi-ae" target="_blank">research artifact<a>)
 						  <br>
 						  <font color="#C40233">
 					            <b>Covered by <a href="https://octo.vmware.com/a-promising-new-approach-to-reliability-testing-for-cluster-management-controllers/" target="_blank">VMware Office of CTO Blog</a> 
