--- a/travel.html
+++ b/travel.html
@@ -152,33 +152,33 @@ div.Section1
                                                   </ul>
                                                 </li>
 						<li><font color="#083b89"><b>China</b></font>:
-                                                  <ul style="list-style-type:circle">
-                                                    <li>Beijing (2009) </li>
-                                                    <li>Changzhou (2008) </li>
-                                                    <li>Chuzhou (1998) </li>
-                                                    <li>Danyang (2000) </li>
-                                                    <li>Guanyun County (2009) </li>
-                                                    <li>Harbin (1993) </li>
-                                                    <li>Hangzhou (2007, 2008) </li>
-                                                    <li>Hong Kong (2009) </li>
-                                                    <li>Huangshan City (2009) </li>
-                                                    <li>Jiangyin (2008) </li>
-                                                    <li>Kunshan (2009) </li>
-                                                    <li>Mudanjiang (1993) </li>
-                                                    <li>Nanjing (2003-2009) </li>
-                                                    <li>Nanling (2013) </li>
-                                                    <li>Shanghai (hometown) </li>
-                                                    <li>Shaoxing (2002) </li>
-                                                    <li>Shenzhen (2009) </li>
-                                                    <li>Suzhou (2008) </li>
-                                                    <li>Taizhou (2006) </li>
-                                                    <li>Weihai (2009) </li>
-                                                    <li>Wuhu (2013) </li>
-                                                    <li>Wuxi (2008) </li>
-                                                    <li>Yangzhou (1996) </li>
-                                                    <li>Yixing (1996) </li>
-                                                  </ul>
-                                                </li>
+                          <ul style="list-style-type:circle">
+                            <li>Beijing (2009) </li>
+                            <li>Changzhou (2008) </li>
+                            <li>Chuzhou (1998) </li>
+                            <li>Danyang (2000) </li>
+                            <li>Guanyun County (2009) </li>
+                            <li>Harbin (1993) </li>
+                            <li>Hangzhou (2007, 2008) </li>
+                            <li>Hong Kong (2009) </li>
+                            <li>Huangshan City (2009) </li>
+                            <li>Jiangyin (2008) </li>
+                            <li>Kunshan (2009) </li>
+                            <li>Mudanjiang (1993) </li>
+                            <li>Nanjing (2003-2009) </li>
+                            <li>Nanling (2013) </li>
+                            <li>Shanghai (hometown) </li>
+                            <li>Shaoxing (2002) </li>
+                            <li>Shenzhen (2009) </li>
+                            <li>Suzhou (2008) </li>
+                            <li>Taizhou (2006) </li>
+                            <li>Weihai (2009) </li>
+                            <li>Wuhu (2013) </li>
+                            <li>Wuxi (2008) </li>
+                            <li>Yangzhou (1996) </li>
+                            <li>Yixing (1996) </li>
+                          </ul>
+                        </li>
 						<li><font color="#083b89"><b>Croatia</b></font>:
                                                   <ul style="list-style-type:circle">
 						     <li>Zagreb (2011) </li>
@@ -211,38 +211,38 @@ div.Section1
                                                   </ul>
                                                 </li>
 						<li><font color="#083b89"><b>Germany</b></font>:
-                                                  <ul style="list-style-type:circle">
-						     <li>Berlin (2009, 2011)</li>
-						     <li>Braunschweig (2010) </li>
-						     <li>Bremen (2010) </li>
-						     <li>Celle (2010) </li>
-						     <li>Dresden (2009) </li>
-						     <li>Düsseldorf (2010) </li>
-						     <li>Frankfurt (2010, 2015) </li>
-						     <li>Füssen (2010) </li>
-						     <li>Goslar (2010) </li>
-						     <li>Göttingen (2010-2011) </li>
-						     <li>Hamburg (2010) </li>
-						     <li>Hamm (2010) </li>
-						     <li>Hanover (2010) </li>
-						     <li>Heidelberg (2010) </li>
-						     <li>Hildesheim (2010) </li>
-						     <li>Kaiserslautern (2017) </li>
-						     <li>Lindau (2010) </li>
-						     <li>Magdeburg (2011) </li>
-						     <li>Mettlach (2023) </li>
-						     <li>Munich (2010, 2011) </li>
-						     <li>Münster (2011) </li>
-						     <li>Nördlingen (2010) </li>
-						     <li>Osnabrück (2011) </li>
-						     <li>Potsdam (2011) </li>
-						     <li>Regensburg (2010) </li>
-						     <li>Trier (2011) </li>
-						     <li>Wadern (2023) </li>
-						     <li>Wolfenbüttel (2010) </li>
-						     <li>Würzburg (2010) </li>
-                                                  </ul>
-                                                </li>
+                          <ul style="list-style-type:circle">
+						    <li>Berlin (2009, 2011)</li>
+						    <li>Braunschweig (2010) </li>
+						    <li>Bremen (2010) </li>
+						    <li>Celle (2010) </li>
+						    <li>Dresden (2009) </li>
+						    <li>Düsseldorf (2010) </li>
+						    <li>Frankfurt (2010, 2015) </li>
+						    <li>Füssen (2010) </li>
+						    <li>Goslar (2010) </li>
+						    <li>Göttingen (2010-2011) </li>
+						    <li>Hamburg (2010) </li>
+						    <li>Hamm (2010) </li>
+						    <li>Hanover (2010) </li>
+						    <li>Heidelberg (2010) </li>
+						    <li>Hildesheim (2010) </li>
+						    <li>Kaiserslautern (2017) </li>
+						    <li>Lindau (2010) </li>
+						    <li>Magdeburg (2011) </li>
+						    <li>Mettlach (2023) </li>
+						    <li>Munich (2010, 2011) </li>
+						    <li>Münster (2011) </li>
+						    <li>Nördlingen (2010) </li>
+						    <li>Osnabrück (2011) </li>
+						    <li>Potsdam (2011) </li>
+						    <li>Regensburg (2010) </li>
+						    <li>Trier (2011) </li>
+						    <li>Wadern (2023) </li>
+						    <li>Wolfenbüttel (2010) </li>
+						    <li>Würzburg (2010) </li>
+                          </ul>
+                        </li>
 						<li><font color="#083b89"><b>Hungary</b></font>:
                                                   <ul style="list-style-type:circle">
 						     <li>Budapest (2011) </li>
@@ -359,99 +359,105 @@ div.Section1
                                                   </ul>
                                                 </li>
 						<li><font color="#083b89"><b>United States</b></font>:
-                                                  <ul style="list-style-type:circle">
-						     <li>Aberdeen, WA (2018) </li>
-						     <li>Albany, NY (2023) </li>
-						     <li>Alexandria, VA (2018) </li>
-						     <li>Annapolis, MD (2017) </li>
-					             <li>Arlington, VA (2018) </li>
-					             <li>Ashland, WI (2022) </li>
-						     <li>Atlanta, GA (2017) </li>
-						     <li>Baltimore, MD (2017) </li>
-						     <li>Berkeley, CA (2015, 2018) </li>
-						     <li>Big Sur, CA (2017) </li>
-					             <li>Bloomington, IL (2020) </li>
-						     <li>Bloomington, IN (2021) </li>
-                                                     <li>Boston, MA (2019, 2023) </li>
-						     <li>Broomfield, CO (2014) </li>
-						     <li>Buffalo, NY (2023) </li>	  
-						     <li>Carmel-by-the-Sea, CA (2017) </li>
-						     <li>Cheyenne, WY (2018) </li>
-                                                     <li>Chicago, IL (many) </li>
-						     <li>Cincinnati, OH (2021) </li>
-						     <li>Clarksville, TN (2021) </li>
-						     <li>Columbus, OH (2021) </li>
-						     <li>Cuyahoga, OH (2021) </li>
-						     <li>Custer, SD (2018) </li>
-						     <li>Denver, CO (2017) </li>
-						     <li>Des Moines, IA (2018) </li>
-						     <li>Duluth, MN (2022) </li>
-						     <li>Eau Claire, WI (2022) </li>
-						     <li>Elko, NV (2018) </li>
-						     <li>Farmington, PA (2013) </li>
-						     <li>Frankfort, KY (2021) </li>
-					             <li>Fremont, CA (2017-2018) </li>
-						     <li>Gatlinburg, TN (2022) </li>
-						     <li>Gibson City, IL (2023) </li>
-						     <li>Green Bay, WI (2022) </li>
-						     <li>Hartford, CT (2023) </li>
-						     <li>Hibbing, MN (2022) </li>
-						     <li>Honolulu/O'ahu, HI (2022) </li>
-						     <li>Indianapolis, IN (2021) </li>  
-						     <li>Irvine, CA (2016) </li>
-						     <li>Ithaca, NY (2023) </li>
-						     <li>Keystone, SD (2018) </li>
-						     <li>Knoxville, TN (2022) </li>
-						     <li>Lake Tahoe, CA / NV (2018) </li>
-						     <li>Laramie, WY (2018) </li>
-						     <li>Lexington, KY (2021) </li>
-						     <li>Los Angeles, CA (2012, 2016) </li>
-						     <li>Louisville, KY (2021) </li>
-						     <li>Madison, WI (2022) </li>
-					             <li>Marshall, IN (2020) </li>
-						     <li>Menlo Park, CA (2017-2018) </li>
-						     <li>Millbrae, CA (2018)</li>
-					             <li>Milwaukee, WI (2022)</li>
-                                                     <li>Monterey, CA (2015) </li>
-						     <li>Morro Bay, CA (2017) </li>
-						     <li>Nashville, TN (2022) </li>
-						     <li>Newark, CA (2017-2018) </li>
-						     <li>New Port, RI (2023) </li>
-						     <li>New York City, NY (2017, 2022) </li>
-						     <li>Niagara Falls, NY (2023) </li>	  
-						     <li>Oakland, CA (2018) </li>
-						     <li>Orlando, FL (2023) </li>
-						     <li>Omaha, NE (2018) </li>
-						     <li>Pasadena, CA (2015) </li>
-						     <li>Placerville, CA (2018) </li>
-						     <li>Providence, RI (2023) </li>
-						     <li>Rapid City, SD (2018) </li>
-						     <li>Reno, NV (2018) </li>
-						     <li>Rock Springs, WY (2018) </li>
-						     <li>Sacramento, CA (2018) </li>
-						     <li>Salt Lake City, CA (2018) </li>
-						     <li>San Diego, CA (2011-2017) </li>
-						     <li>San Francisco, CA (many) </li>
-						     <li>San Jose, CA (many) </li>
-						     <li>Sandusky, OH (2021) </li>
-						     <li>Santa Barbara, CA (2017) </li>
-						     <li>Santa Clara, CA (many) </li>
-						     <li>Santa Cruz, CA (2017) </li>
-						     <li>Santa Maria, CA (2017) </li>
-						     <li>Saratoga, CA (2018) </li>
-						     <li>Savannah, GA (2016) </li>
-						     <li>Seattle, WA (2018) </li>
-						     <li>Sioux City, IA (2018) </li>
-						     <li>Sioux Falls, SD (2018)</li>
-						     <li>Solvang, CA (2017) </li>
-						     <li>Springfield, IL (2019) </li>
-					             <li>St. Louis, MO (2021) </li>
-						     <li>State College, PA (2017) </li>
-						     <li>Sunnyvale, CA (2012, 2015) </li>
-						     <li>Champaign-Urbana, IL (2017)</li>
-						     <li>White Plains, NY (2022) </li>
-                                                  </ul>
-                                                </li>
+                          <ul style="list-style-type:circle">
+							<li>Aberdeen, WA (2018) </li>
+						    <li>Albany, NY (2023) </li>
+						    <li>Alexandria, VA (2018) </li>
+						    <li>Annapolis, MD (2017) </li>
+					        <li>Arlington, VA (2018) </li>
+					        <li>Ashland, WI (2022) </li>
+						    <li>Atlanta, GA (2017) </li>
+						    <li>Baltimore, MD (2017) </li>
+						    <li>Berkeley, CA (2015, 2018) </li>
+						    <li>Big Sur, CA (2017) </li>
+					        <li>Bloomington, IL (2020, 2023) </li>
+						    <li>Bloomington, IN (2021) </li>
+                            <li>Boston, MA (2019, 2023) </li>
+							<li>Boulder, CO (2023) </li>
+						    <li>Broomfield, CO (2014) </li>
+						    <li>Buffalo, NY (2023) </li>	  
+						    <li>Carmel-by-the-Sea, CA (2017) </li>
+						    <li>Cheyenne, WY (2018) </li>
+                            <li>Chicago, IL (many) </li>
+						    <li>Cincinnati, OH (2021) </li>
+						    <li>Clarksville, TN (2021) </li>
+							<li>Colorado Springs, CO (2023) </li>
+						    <li>Columbus, OH (2021) </li>
+							<li>Cortez, CO (2023) </li>
+							<li>Crested Butte, CO (2023) </li>
+						    <li>Cuyahoga, OH (2021) </li>
+						    <li>Custer, SD (2018) </li>
+						    <li>Denver, CO (2017, 2023) </li>
+						    <li>Des Moines, IA (2018) </li>
+						    <li>Duluth, MN (2022) </li>
+						    <li>Eau Claire, WI (2022) </li>
+						    <li>Elko, NV (2018) </li>
+						    <li>Farmington, PA (2013) </li>
+						    <li>Frankfort, KY (2021) </li>
+					        <li>Fremont, CA (2017-2018) </li>
+						    <li>Gatlinburg, TN (2022) </li>
+						    <li>Gibson City, IL (2023) </li>
+						    <li>Green Bay, WI (2022) </li>
+						    <li>Hartford, CT (2023) </li>
+						    <li>Hibbing, MN (2022) </li>
+						    <li>Honolulu/O'ahu, HI (2022) </li>
+						    <li>Indianapolis, IN (2021) </li>  
+						    <li>Irvine, CA (2016) </li>
+						    <li>Ithaca, NY (2023) </li>
+						    <li>Keystone, SD (2018) </li>
+						    <li>Knoxville, TN (2022) </li>
+						    <li>Lake Tahoe, CA / NV (2018) </li>
+						    <li>Laramie, WY (2018) </li>
+						    <li>Lexington, KY (2021) </li>
+						    <li>Los Angeles, CA (2012, 2016) </li>
+						    <li>Louisville, KY (2021) </li>
+						    <li>Madison, WI (2022) </li>
+					        <li>Marshall, IN (2020) </li>
+						    <li>Menlo Park, CA (2017-2018) </li>
+						    <li>Millbrae, CA (2018)</li>
+					        <li>Milwaukee, WI (2022)</li>
+                            <li>Monterey, CA (2015) </li>
+							<li>Montrose, CO (2023) </li>
+						    <li>Morro Bay, CA (2017) </li>
+						    <li>Nashville, TN (2022) </li>
+						    <li>Newark, CA (2017-2018) </li>
+						    <li>New Port, RI (2023) </li>
+						    <li>New York City, NY (2017, 2022) </li>
+						    <li>Niagara Falls, NY (2023) </li>	  
+						    <li>Oakland, CA (2018) </li>
+						    <li>Orlando, FL (2023) </li>
+						    <li>Omaha, NE (2018) </li>
+						    <li>Pasadena, CA (2015) </li>
+						    <li>Placerville, CA (2018) </li>
+						    <li>Providence, RI (2023) </li>
+							<li>Pueblo, CO (2023) </li>
+						    <li>Rapid City, SD (2018) </li>
+						    <li>Reno, NV (2018) </li>
+						    <li>Rock Springs, WY (2018) </li>
+						    <li>Sacramento, CA (2018) </li>
+						    <li>Salt Lake City, CA (2018) </li>
+						    <li>San Diego, CA (2011-2017) </li>
+						    <li>San Francisco, CA (many) </li>
+						    <li>San Jose, CA (many) </li>
+						    <li>Sandusky, OH (2021) </li>
+						    <li>Santa Barbara, CA (2017) </li>
+						    <li>Santa Clara, CA (2012, 2015, 2017, 2018) </li>
+						    <li>Santa Cruz, CA (2017) </li>
+						    <li>Santa Maria, CA (2017) </li>
+						    <li>Saratoga, CA (2018) </li>
+						    <li>Savannah, GA (2016) </li>
+						    <li>Seattle, WA (2018) </li>
+						    <li>Sioux City, IA (2018) </li>
+						    <li>Sioux Falls, SD (2018)</li>
+						    <li>Solvang, CA (2017) </li>
+						    <li>Springfield, IL (2019) </li>
+					        <li>St. Louis, MO (2021) </li>
+						    <li>State College, PA (2017) </li>
+						    <li>Sunnyvale, CA (2012, 2015) </li>
+						    <li>Champaign-Urbana, IL (2017)</li>
+						    <li>White Plains, NY (2022) </li>
+                          </ul>
+                        </li>
 						<li><font color="#083b89"><b>Vatican</b></font>:
                                                   <ul style="list-style-type:circle">
 						     <li>Vatican City (2010, 2011)</li>
