--- a/pub.html
+++ b/pub.html
@@ -138,7 +138,7 @@ td.papers {
 						  <br>
 						  Weiwei Jia, Jiyuan Zhang, Jianchen Shan, Yiming Du, Xiaoning Ding, and Tianyin Xu
 						  <br>
-						  In Proceedings of the 32nd International Conference on Parallel Architectures and Compilation Techniques (<font color="#083b89"><b>PACT'23</b></font>), Vienna, Austria, CA, Oct. 2023.
+						  In Proceedings of the 32nd International Conference on Parallel Architectures and Compilation Techniques (<font color="#083b89"><b>PACT'23</b></font>), Vienna, Austria, Oct. 2023.
 					  </span>
 				  </div>
 		  </td>
