--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Wenjie Ma</a>, Research Scholar (Summer 2023 - now)</p>
 				      				<p class="STYLE223"><a href="https://www.linkedin.com/in/fan-chung-8637741a4/" target="_blank">Fan Chung</a>, Undergraduate student (UIUC/NYCU) (Spring 2023 - now)</p>
 	        						<p class="STYLE223"><a href="https://github.com/ZichengMa" target="_blank">Zicheng Ma</a>, Undergraduate student (ZJUI) (Summer 2023 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Cheng Ding</a>, Undergraduate student (USTC), co-advised by <a href="https://www.cs.cornell.edu/~legunsen/" target="_blank">Owolabi Legunsen</a></p> 
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Cheng Ding</a>, Undergraduate student (USTC) (Summer 2023 - now), co-advised by <a href="https://www.cs.cornell.edu/~legunsen/" target="_blank">Owolabi Legunsen</a></p> 
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saad Sher Alam</a>, Undergraduate student (LUMS) (Summer 2023 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">William Zheng</a>, Undergraduate student (UIUC) (Summer 2023 - now)</p>
 				      <!--
