--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -79,20 +79,34 @@ td.papers {
       </font>
     </td>
   <tr>
-	  
+
   <tr>
     <td class="date"><font color="#083b89"></font></td>
       <td class="papers">
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="https://dplyukhin.github.io/" target="_blank">Dan Plyukhin</a></strong>
+            <strong><a href="https://jeffhj.github.io/" target="_blank">Jie Huang</a></strong>
             <br>
-	       Fault-Tolerant and Fault-Recovering Garbage Collection for The Actor Model: A Collage-based Approach
+            Department of Computer Science, University of Illinois at Urbana-Champaign
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Aug 2023.
+            Advisor: <a href="https://cs.illinois.edu/about/people/faculty/kcchang" target="_blank">Kevin Chen-Chuan Chang</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong><a href="https://tzubinyan.tw/" target="_blank">Tzu-Bin Yan</a></strong>
             <br>
-            Advisor: <a href="http://osl.cs.illinois.edu/members/agha.html" target="_blank">Gul Agha</a>
+            Department of Computer Science, University of Illinois at Urbana-Champaign
+            <br>
+            Advisor: <a href="https://klevchen.ece.illinois.edu/" target="_blank">Kirill Levchenko</a>
           </span>
         </div>
       </td>
@@ -129,6 +143,24 @@ td.papers {
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Oct. 2022.
             <br>
             Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong><a href="https://dplyukhin.github.io/" target="_blank">Dan Plyukhin</a></strong>
+            <br>
+	       Fault-Tolerant and Fault-Recovering Garbage Collection for The Actor Model: A Collage-based Approach
+            <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Aug 2023.
+            <br>
+            Advisor: <a href="http://osl.cs.illinois.edu/members/agha.html" target="_blank">Gul Agha</a>
           </span>
         </div>
       </td>
