--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -88,7 +88,9 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong><a href="https://jeffhj.github.io/" target="_blank">Jie Huang</a></strong>
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign
+	    Augmenting and Safeguarding Knowledge in Large Language Models
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Sep. 2023.
             <br>
             Advisor: <a href="https://cs.illinois.edu/about/people/faculty/kcchang" target="_blank">Kevin Chen-Chuan Chang</a>
           </span>
