--- a/defects.html
+++ b/defects.html
@@ -242,6 +242,11 @@ div.Section1
 				<a href="https://github.com/sieve-project/sieve" target="_blank">Sieve</a> 
 				(<a href="https://github.com/sieve-project/sieve/blob/main/docs/reprod.md" target="_blank">replication package</a>)
                         </div>
+			<div align="justify" class="STYLE4" style="font-size: 12pt; font-family: Times New Roman;">
+                        	<a href="https://github.com/xlab-uiuc/acto/blob/main/bugs.md" target="_blank">76 new bugs</a> found by 
+				<a href="https://github.com/xlab-uiuc/acto" target="_blank">Acto</a> 
+				(<a href="https://github.com/xlab-uiuc/acto/tree/sosp-ae" target="_blank">replication package</a>)
+                        </div>
 		        <p></p>
 		</blockquote>
 		<p>
