--- a/index.html
+++ b/index.html
@@ -542,6 +542,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://liliatangxy.github.io/" target="_blank">Lilia Tang</a>, PhD student (Fall 2020 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/ray-ozzie-computer-science-fellowship" target="_blank"><font color="#E84A27">Ray Ozzie Fellowship</font></a></p>
 	-->							
 								<p class="STYLE223"><a href="https://schai.me/" target="_blank">Siyuan Chai</a>, PhD student (Fall 2021 - now)</p>
+				            			<p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD student (Fall 2021 - now)</p>
 				                                <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a>, PhD student (Fall 2021 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a></p>
 								<p class="STYLE223"><a href="https://shuaiwang516.github.io/" target="_blank">Shuai Wang</a>, PhD student (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 	<!--
@@ -578,8 +579,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://essoz.github.io/" target="_blank">Yuxuan (Matt) Jiang</a>, BE 2023 &rarr; University of Michigan (PhD)</p>
 				  <p class="STYLE223"><a href="https://nsdi.dev/" target="_blank">Feiran (Alex) Qin</a>, (ShanghaiTech/UIUC), Fall 2022 &rarr; North Carolina State University (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Kunle Li</a>, BE 2023 &rarr; CMU (MS)</p>
-				  <p class="STYLE223"><a href="https://taham0.github.io/" target="_blank">Muhammad Taha</a> (LUMS) (Summer 2022) &rarr; Purdue (MS)</p>    
-				  <p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD student, currently on leave at Microsoft Research Asia</p>
+				  <p class="STYLE223"><a href="https://taham0.github.io/" target="_blank">Muhammad Taha</a> (LUMS) (Summer 2022) &rarr; Purdue (MS)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/kaihsun1996/" target="_blank">Kai-Hsun (Kevin) Chen</a>, M.Eng 2022 &rarr; Databricks &rarr; Anyscale</p>
 				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, PhD 2022, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/3m-foundation-fellowship" target="_blank"><font color="#E84A27">3M Foundation Fellowship</font></a> &rarr; Meta &rarr; Stellar Cyber</p>
 				  <p class="STYLE223"><a href="https://chaitanya-bhandari.com/" target="_blank">Chaitanya B. Bhandari</a>, Research Scholar, 2021--2022 &rarr; UIUC (MS)</p> 
@@ -594,7 +594,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 					  <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5" target="_blank"><font color="#E84A27">University Honor</font></a> &rarr; Google (kernel)</p>
 				  <p class="STYLE223"><a href="https://sampalomad.github.io/" target="_blank">Sam Cheng</a>, PhD student, co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a> &rarr; Switched to the AI/ML area after two years, in 2021 </p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/andrew-yoo-5a5559182/" target="_blank">Andrew B. Yoo</a>, MS 2021 (<a href="pub/YOO-THESIS-2021.pdf" target="_blank">thesis</a>), co-advised by <a href="http://mpaxos.com/" target="_blank">Shuai Mu</a>, awarded <a href="https://cs.illinois.edu/news/five-cs-graduate-students-2021-siebel-scholars" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Whova (Infra)</p>
-				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yuanliang Zhang</a> (NUDT), visiting PhD student, 2019--2020 &harr; NUDT &rarr; Assistant Professor at NUDT</p>
+				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yuanliang Zhang</a> (NUDT), visiting PhD student, 2019--2020 &rarr; Assistant Professor at NUDT</p>
 				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a>, MCS 2020 (<a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream Computing Infra)</p>
 				  <p class="STYLE223"><a href="https://chenqingrong.github.io/" target="_blank">Qingrong Chen</a>, MS 2020 (<a href="pub/CHEN-THESIS-2020.pdf" target="_blank">thesis</a>), awarded <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Facebook (AI Infra) &rarr; ByteDance (ML Infra) </p>
 				  <p class="STYLE223"><a href="https://kaiyuanzhang.com/" target="_blank">Kaiyuan Zhang</a> (UT Dallas), Summer 2020 &rarr; Purdue University (PhD)</p>
