--- a/index.html
+++ b/index.html
@@ -479,11 +479,15 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		      <a href="https://escholarship.org/uc/jsys/about" target="_blank">Journal of Systems Research</a>
 		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>)
 	          </p>
+	          <p class="STYLE223">2024
+	            EuroSys
+	          </p>
                   <p class="STYLE223">2023
 		    <a href="https://www.usenix.org/conference/osdi23" target="_blank">OSDI</a>,
 	            <a href="https://www.usenix.org/conference/nsdi23" target="_blank">NSDI</a>,
 	            <a href="https://sysdw23.github.io/" target="_blank">SOSP DW</a>,
 	            <a href="https://sosp2023.mpi-sws.org/cfsrc.html" target="_blank">SOSP SRC</a>,
+		    <a href="https://sosp2023.mpi-sws.org/cfpo.html" target="_blank">SOSP Poster</a>,
 	            <a href="https://dsn2023.dei.uc.pt/" target="_blank">DSN</a>,
 		    <a href="https://www.sigmetrics.org/sigmetrics2023/" target="_blank">Sigmetrics</a>,
 		    <a href="https://2023.esec-fse.org/track/fse-2023-industry" target="_blank">ESEC/FSE Industry Track</a>,
@@ -535,31 +539,31 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>  
                               <TD class=content width="96%">
-								<p class="STYLE223">Jongyul Kim, Postdoc fellow (Fall 2023 - now)</p>
-								<p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a>, PhD student (Fall 2019 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/yunni-and-maxine-pao-memorial-fellowship" target="_blank"><font color="#E84A27">Yunni and Maxine Pao Memorial Fellowship</font></a></p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jinghao Jia</a>, PhD student (Fall 2020 - now), co-advised by <a href="https://people.cs.vt.edu/djwillia/" target="_blank">Dan Williams</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>, <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a></p>
+								<p class="STYLE223">Jongyul Kim, Postdoc Research Fellow (Fall 2023 - now)</p>
+								<p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a>, PhD Candidate (Fall 2019 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/yunni-and-maxine-pao-memorial-fellowship" target="_blank"><font color="#E84A27">Yunni and Maxine Pao Memorial Fellowship</font></a></p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jinghao Jia</a>, PhD Candidate (Fall 2020 - now), co-advised by <a href="https://people.cs.vt.edu/djwillia/" target="_blank">Dan Williams</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>, <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a></p>
 	<!--			
-								<p class="STYLE223"><a href="https://liliatangxy.github.io/" target="_blank">Lilia Tang</a>, PhD student (Fall 2020 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/ray-ozzie-computer-science-fellowship" target="_blank"><font color="#E84A27">Ray Ozzie Fellowship</font></a></p>
+								<p class="STYLE223"><a href="https://liliatangxy.github.io/" target="_blank">Lilia Tang</a>, PhD Candidate (Fall 2020 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/ray-ozzie-computer-science-fellowship" target="_blank"><font color="#E84A27">Ray Ozzie Fellowship</font></a></p>
 	-->							
-								<p class="STYLE223"><a href="https://schai.me/" target="_blank">Siyuan Chai</a>, PhD student (Fall 2021 - now)</p>
-				            			<p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD student (Fall 2021 - now)</p>
-				                                <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a>, PhD student (Fall 2021 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a></p>
-								<p class="STYLE223"><a href="https://shuaiwang516.github.io/" target="_blank">Shuai Wang</a>, PhD student (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
+								<p class="STYLE223"><a href="https://schai.me/" target="_blank">Siyuan Chai</a>, PhD Candidate (Fall 2021 - now)</p>
+				            			<p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD Student (Fall 2021 - now)</p>
+				                                <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a>, PhD Candidate (Fall 2021 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a></p>
+								<p class="STYLE223"><a href="https://shuaiwang516.github.io/" target="_blank">Shuai Wang</a>, PhD Candidate (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 	<!--
-				                                <p class="STYLE223"><a href="https://zzjas.com/" target="_blank">Zijie Zhao</a>, PhD student (Fall 2022 - now), co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p>
+				                                <p class="STYLE223"><a href="https://zzjas.com/" target="_blank">Zijie Zhao</a>, PhD Student (Fall 2022 - now), co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p>
 	-->
-								<p class="STYLE223"><a href="https://maknee.github.io/" target="_blank">Henry Zhu</a>, PhD student (Fall 2022 - now), co-advised by <a href="https://aishwaryaganesan.github.io/" target="_blank">Aishwarya Ganesan</a> and <a href="https://ramalagappan.github.io/" target="_blank">Ramnatthan Alagappan</a></p>
-								<p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, MS student (Fall 2022 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
-				            			<p class="STYLE223"><a href="https://www.linkedin.com/in/anna-mazhar/" target="_blank">Anna Mazhar</a>, MS student (Fall 2022 - now)</p>
-				                                <p class="STYLE223"><a href="https://pratiksampat.web.illinois.edu/" target="_blank">Pratik Rajesh Sampat</a>, MS student (Fall 2022 - now), co-advised by <a href="https://ghose.web.illinois.edu/" target="_blank">Saugata Ghose</a></p>
-				                                <p class="STYLE223"><a href="https://jiyuan.is/" target="_blank">Jiyuan Zhang</a>, MS student (Fall 2022 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Ruowen Qin</a>, MCS student (Summer 2023 - now)</p>
+								<p class="STYLE223"><a href="https://maknee.github.io/" target="_blank">Henry Zhu</a>, PhD Student (Fall 2022 - now), co-advised by <a href="https://aishwaryaganesan.github.io/" target="_blank">Aishwarya Ganesan</a> and <a href="https://ramalagappan.github.io/" target="_blank">Ramnatthan Alagappan</a></p>
+								<p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, MS Student (Fall 2022 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
+				            			<p class="STYLE223"><a href="https://www.linkedin.com/in/anna-mazhar/" target="_blank">Anna Mazhar</a>, MS Student (Fall 2022 - now)</p>
+				                                <p class="STYLE223"><a href="https://pratiksampat.web.illinois.edu/" target="_blank">Pratik Rajesh Sampat</a>, MS Student (Fall 2022 - now), co-advised by <a href="https://ghose.web.illinois.edu/" target="_blank">Saugata Ghose</a></p>
+				                                <p class="STYLE223"><a href="https://jiyuan.is/" target="_blank">Jiyuan Zhang</a>, MS Student (Fall 2022 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Ruowen Qin</a>, MCS Student (Summer 2023 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Wenjie Ma</a>, Research Scholar (Summer 2023 - now)</p>
-				      				<p class="STYLE223"><a href="https://www.linkedin.com/in/fan-chung-8637741a4/" target="_blank">Fan Chung</a>, Undergraduate student (UIUC/NYCU) (Spring 2023 - now)</p>
-	        						<p class="STYLE223"><a href="https://github.com/ZichengMa" target="_blank">Zicheng Ma</a>, Undergraduate student (ZJUI) (Summer 2023 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Cheng Ding</a>, Undergraduate student (USTC) (Summer 2023 - now), co-advised by <a href="https://www.cs.cornell.edu/~legunsen/" target="_blank">Owolabi Legunsen</a></p> 
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saad Sher Alam</a>, Undergraduate student (LUMS) (Summer 2023 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">William Zheng</a>, Undergraduate student (UIUC) (Summer 2023 - now)</p>
+				      				<p class="STYLE223"><a href="https://www.linkedin.com/in/fan-chung-8637741a4/" target="_blank">Fan Chung</a>, Undergraduate Student (UIUC/NYCU) (Spring 2023 - now)</p>
+	        						<p class="STYLE223"><a href="https://github.com/ZichengMa" target="_blank">Zicheng Ma</a>, Undergraduate Student (ZJUI) (Summer 2023 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Cheng Ding</a>, Undergraduate Student (USTC) (Summer 2023 - now), co-advised by <a href="https://www.cs.cornell.edu/~legunsen/" target="_blank">Owolabi Legunsen</a></p> 
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saad Sher Alam</a>, Undergraduate Student (LUMS) (Summer 2023 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now)</p>
 				      <!--
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiajun (Kashun) Cheng</a>, Undergraduate student (ShanghaiTech/Berkeley) (Summer 2023 - now)</p>
 								<p class="STYLE223"><a href="https://whentojump.xyz/" target="_blank">Wentao Zhang</a>, MS student (SJTU) (Summer 2022 - now)</p>
