--- a/index.html
+++ b/index.html
@@ -549,6 +549,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				            			<p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD Student (Fall 2021 - now)</p>
 				                                <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a>, PhD Candidate (Fall 2021 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a></p>
 								<p class="STYLE223"><a href="https://shuaiwang516.github.io/" target="_blank">Shuai Wang</a>, PhD Candidate (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
+								<p class="STYLE223"><a href="https://www.linhao.me/" target="_blank">Hao Lin</a>, Visiting PhD Student (Fall 2023 - now)</p>
 	<!--
 				                                <p class="STYLE223"><a href="https://zzjas.com/" target="_blank">Zijie Zhao</a>, PhD Student (Fall 2022 - now), co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p>
 	-->
